--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>หน้าแรก</title>
+  <title>Pre Assembly</title>
 </head>
 <body>
   <h1>ยินดีต้อนรับสู่หน้าแรก</h1>
-  <!-- เพิ่มเนื้อหาของ eBook ที่ต้องการแสดง -->
+  <คู่มือการใช้งาน>
 </body>
 </html>
